--- a/index2.html
+++ b/index2.html
@@ -8,10 +8,11 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Cairo&display=swap" rel="stylesheet">
     <title>Hello, world!</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color:white;">
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color:white; font-weight: bold; font-family: 'Cairo', sans-serif;">
       <div style="margin-left:10%;">
         <img style="" src="./img/logo.png" />
       </div>
