--- a/index2.html
+++ b/index2.html
@@ -1,14 +1,17 @@
 <!doctype html>
 <html lang="en">
   <head>
+
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
     <link href="https://fonts.googleapis.com/css?family=Cairo&display=swap" rel="stylesheet">
+
     <title>Hello, world!</title>
   </head>
   <body>
@@ -21,48 +24,29 @@
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent" >
-        <ul class="navbar-nav mr-auto "style="position: relative;  margin-left:auto;">
+        <ul class="navbar-nav mr-auto ib-nav-links"style="position: relative;  margin-left:auto;">
           <li class="nav-item">
-            <a class="nav-link" style="color:black;font-size:20px;" href="#">Home</a>
+            <a class="nav-link" style="color: black;font-size:20px;" href="index2.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="color:black;font-size:20px;" href="#">Incubatees</a>
+            <a class="nav-link" style="color:black;font-size:20px;" href="incubeetes.html">Incubatees</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="color:black;font-size:20px;" href="#">Committee</a>
+            <a class="nav-link" style="color:black;font-size:20px;" href="team.html">Committee</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="color:black;font-size:20px;" href="#">Contact Us</a>
+            <a class="nav-link" style="color:black;font-size:20px;" href="contact.html">Contact Us</a>
           </li>
-          <!-- <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Dropdown
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-          </li> -->
-          <!-- <li class="nav-item">
-            <a class="nav-link disabled" href="#">Disabled</a>
-          </li> -->
+          <li class="nav-item">
+            <a class="nav-link" style="color: black;font-size:20px;" href="document.html">Documents</a>
+          </li>
+
         </ul>
         <a class="navbar-brand" style="color:#214AA4; margin-right:10%;" href="#">MSME Incubator</a>
 
       </div>
     </nav>
-    <!-- <header class="py-5 mb-5" style="background-color:#ABB2B9;">
-      <div class="container h-100">
-        <div class="row h-100 align-items-center">
-          <div class="col-lg-12">
-            <h1 class="display-4 text-white mt-5 mb-2">Institute Business Incubator</h1>
-            <p class="lead mb-5" style="color:#103B58; font-size:20px; font-weight:bold;">Institute Business Incubator was inaugrated at Indian Institute of Technology, Bhilai, GEC Campus by Prof. Rajat Moona on 29<sup>th</sup> January 2020 to promote and nurture innovative and enterprenurial skills in students of institute.</p>
-          </div>
-        </div>
-      </div>
-    </header> -->
+
     <div class="py-5 mb-5 wrap" style="height:350px;">
       <div class="bg" style="height:350px;width:100%;">
 
@@ -91,19 +75,7 @@
           <div class="col-md-4 mb-5">
             <h2>Important Links</h2>
             <hr>
-            <!-- <address>
-              <strong>Start Bootstrap</strong>
-              <br>3481 Melrose Place
-              <br>Beverly Hills, CA 90210
-              <br>
-            </address>
-            <address>
-              <abbr title="Phone">P:</abbr>
-              (123) 456-7890
-              <br>
-              <abbr title="Email">E:</abbr>
-              <a href="mailto:#">name@example.com</a>
-            </address> -->
+
             <a href="#" style="color:black;">Institute Memorandum</a><br>
             <a href="#" style="color:black;">Application Form</a>
 
@@ -120,7 +92,7 @@
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque sequi doloribus.</p>
               </div>
               <div class="card-footer">
-                <a href="#" class="btn btn-primary">Find Out More!</a>
+                <a href="post.html" class="btn btn-primary">Find Out More!</a>
               </div>
             </div>
           </div>
@@ -132,7 +104,7 @@
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque sequi doloribus totam ut praesentium aut.</p>
               </div>
               <div class="card-footer">
-                <a href="#" class="btn btn-primary">Find Out More!</a>
+                <a href="post.html" class="btn btn-primary">Find Out More!</a>
               </div>
             </div>
           </div>
@@ -144,7 +116,7 @@
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
               </div>
               <div class="card-footer">
-                <a href="#" class="btn btn-primary">Find Out More!</a>
+                <a href="post.html" class="btn btn-primary">Find Out More!</a>
               </div>
             </div>
           </div>
