--- a/post.html
+++ b/post.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="./css/main.css">
     <title>Hello, world!</title>
   </head>
-  <body>
+  <body style="background:#f8f9fa;">
 
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color:white;">
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color:white; font-weight: bold; font-family: 'Cairo', sans-serif;">
       <div style="margin-left:10%;">
         <img style="" src="./img/logo.png" />
       </div>
@@ -21,24 +21,26 @@
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent" >
-        <ul class="navbar-nav mr-auto "style="position: relative;  margin-left:auto;">
+        <ul class="navbar-nav mr-auto ib-nav-links"style="position: relative;  margin-left:auto;">
           <li class="nav-item">
-            <a class="nav-link" style="color:black;font-size:20px;" href="#">Home</a>
+            <a class="nav-link" style="color: black;font-size:20px;" href="index2.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="color:black;font-size:20px;" href="#">Incubatees</a>
+            <a class="nav-link" style="color:black;font-size:20px;" href="incubeetes.html">Incubatees</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="color:black;font-size:20px;" href="#">Committee</a>
+            <a class="nav-link" style="color:black;font-size:20px;" href="team.html">Committee</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="color:black;font-size:20px;" href="#">Contact Us</a>
+            <a class="nav-link" style="color:black;font-size:20px;" href="contact.html">Contact Us</a>
           </li>
+
         </ul>
         <a class="navbar-brand" style="color:#214AA4; margin-right:10%;" href="#">MSME Incubator</a>
 
       </div>
     </nav>
+
 
 
 
